Fix category hover effect so that it does not shift when it stacks

--- a/styles/sass/partials/_category.scss
+++ b/styles/sass/partials/_category.scss
@@ -37,8 +37,7 @@
 
 //MEDIA QUERY STARTS HERE
 
-@media (max-width:1050px){
-
+@media (max-width:1367px){
   .category {
 
     &__items {
@@ -48,8 +47,8 @@
       }
     }
   }
-
 }
+
 
 @media (max-width: 650px){
 
